--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 
 						<div class="slide-caption">
                             <div class="caption-content">
-                                <h2 class="animated fadeInDown">BLUE Onepage HTML5 Template</h2>
+                                <h2 class="animated fadeInDown">UX UI Designer Portfolio</h2>
                                 <span class="animated fadeInDown">Clean and Professional one page Template</span>
                                 <a href="#" class="btn btn-blue btn-effect">Join US</a>
                             </div>
@@ -124,7 +124,7 @@
 						<div class="bg-img bg-img-2"></div>
 						<div class="slide-caption">
                             <div class="caption-content">
-                                <h2>BLUE Onepage HTML5 Template</h2>
+                                <h2>UX UI Designer Portfolio</h2>
                                 <span>Clean and Professional one page Template</span>
                                 <a href="#" class="btn btn-blue btn-effect">Join US</a>
                             </div>
@@ -137,7 +137,7 @@
 						<div class="bg-img bg-img-3"></div>
 						<div class="slide-caption">
                             <div class="caption-content">
-                                <h2>BLUE Onepage HTML5 Template</h2>
+                                <h2>UX UI Designer Portfolio</h2>
                                 <span>Clean and Professional one page Template</span>
                                 <a href="#" class="btn btn-blue btn-effect">Join US</a>
                             </div>
