--- a/index.html
+++ b/index.html
@@ -176,8 +176,8 @@
 
     <div class="footer-margin">
       <div class="social-footer">
-        <a href="https://www.facebook.com/thomsooncom"><i class="fa fa-facebook"></i></a>
-        <a href="https://www.behance.net/TomaszMazurczak"><i class="fa fa-behance"></i></a>
+        <a href="https://www.facebook.com/lina.berjaner"><i class="fa fa-facebook"></i></a>
+        <a href="https://www.behance.net/lina_berzhaner"><i class="fa fa-behance"></i></a>
       
       </div>     
       <div class="copyright">© Copyright 2015 Thomsoon.com. All Rights Reserved.</div>
