add facebook profile

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 
     <div class="footer-margin">
       <div class="social-footer">
-        <a href="https://www.facebook.com"><i class="fa fa-facebook"></i></a>
+        <a href="https://www.facebook.com/lina.berjaner"><i class="fa fa-facebook"></i></a>
         <a href="https://www.behance.net/lina_berzhaner"><i class="fa fa-behance"></i></a>
       
       </div>     
