--- a/contact.html
+++ b/contact.html
@@ -71,7 +71,7 @@
         <div class="text-intro">
 
           <h1>Contact</h1>
-          <p>To contact us please use the contact form visible. When sending files, please use the following e-mail</p>
+          <p>To contact us please use the contact form visible. When sending files, please use the following e-mail: lina@berzhaner.com</p>
 
           <form method="post" action="?" data-jkit="[form:validateonly=true]">
           
