--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
   <header id="fullscreen">
     
       <div class="logo" id="full"><a class="ajax-link" href="index.html">LINA BERZHANER</a></div>
+
+       <div class="logo" id="fullprofession"><a class="ajax-link" href="index.html">UX UI Designer</a></div>
       
         <div class="menu-index" id="button">
         <i class="fa fa-bars"></i>
