project page changes

--- a/projects.html
+++ b/projects.html
@@ -89,8 +89,8 @@
       <img src="img/portfolio/1.jpg">
         <a class="ajax-link" href="single.html">  
           <div class="grid-hover">
-            <h1>Single</h1>
-            <p>Branding</p>
+            <h1>PIX4DCAPTURE</h1>
+            <p>Mobile App</p>
           </div>
         </a>  
     </li>
@@ -99,8 +99,8 @@
       <img src="img/portfolio/5.jpg">
         <a class="ajax-link" href="single-fullscreen.html">  
           <div class="grid-hover">
-            <h1>Single</h1>
-            <p>Branding</p>
+            <h1>MAPPER</h1>
+            <p>Desktop</p>
           </div>
         </a>      
     </li>    
@@ -109,8 +109,8 @@
       <img src="img/portfolio/2.jpg">
         <a class="ajax-link" href="#">  
           <div class="grid-hover">
-            <h1>Single</h1>
-            <p>Branding</p>
+            <h1>COMEIN</h1>
+            <p>Mobile App</p>
           </div>
         </a>      
     </li>  
@@ -119,8 +119,8 @@
       <img src="img/portfolio/3.jpg">
         <a class="ajax-link" href="#">  
           <div class="grid-hover">
-            <h1>Single</h1>
-            <p>Branding</p>
+            <h1>MUSIC BOT</h1>
+            <p>Mobile App</p>
           </div>
         </a>      
     </li>    
@@ -129,8 +129,8 @@
       <img src="img/portfolio/4.jpg">
         <a class="ajax-link" href="#">  
           <div class="grid-hover">
-            <h1>Single</h1>
-            <p>Branding</p>
+            <h1>EASY BANK</h1>
+            <p>Desktop</p>
           </div>
         </a>      
     </li>    
@@ -139,8 +139,8 @@
       <img src="img/portfolio/6.jpg">
         <a class="ajax-link" href="#">  
           <div class="grid-hover">
-            <h1>Single</h1>
-            <p>Branding</p>
+            <h1>HEXAHEXA</h1>
+            <p>Game</p>
           </div>
         </a>      
     </li>  
