project page changes

--- a/projects.html
+++ b/projects.html
@@ -5,10 +5,7 @@
 
   <meta charset="utf-8">
   <title>Projects - THOMSOON - Portfolio with grid and modern simplicity style - download now!</title>
-  <meta name="description" content="THOMSOON - Portfolio Masonry boxed layout. Clean and minimalist portfolio and photography.">
-  <meta name="keywords" content="thomsoon, simplicity, theme, html5, download, masonry, showroom, creative ">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <meta name="author" content="thomsoon.com">
+ 
   <link rel="icon" type="image/png" href="img/icon.png" />
 
 <!--Style-->
@@ -75,7 +72,7 @@
         <div class="text-intro">
 
           <h1>Projects</h1>
-          <p>Please check my portfolio. All project is clean and simplicity modern style. You can buy this template.</p>
+          <p>Please check my portfolio</p>
 
         </div>
 
