--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" class="no-js">
 	<title>Portfolio website</title>
-	<meta name="author" content="Amit Bajracharya">
+	<meta name="author" content="Lina Berzhaner">
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		
@@ -32,7 +32,7 @@
 		<div class="absolute-center">
 		<div class="row">
 			<div class="col-sm-7">
-				<h1 class="info animated fadeInDown"><a href="" class="logo">Hi<br>I am <u>Bootstrap</u></a><br><b>I do Website <span>Design</span><br>Frontend <span>Development</span><br>& Wordpress.</b></h1>
+				<h1 class="info animated fadeInDown"><a href="" class="logo">Hi<br>I am <u>I'm Berzhaner Lina a UX UI Designer and Interactive Media Artist</u></a><br><b>I do UX Research <span>Design</span><br> <span></span><br></b></h1>
 				<a href="#works" class="btn scroll animated bounceInUp">View My Works</a><a href="#contact" class="btn scroll animated bounceInDown">Contact</a>
 			</div>
 			<div class="col-sm-4 col-sm-offset-1">
@@ -94,56 +94,6 @@
 
 </div>
 <!-- works -->
-
-
-
-
-<!-- testimonials -->
-<div class="testimonials-bg">
-<div class="testimonials center spacer">
-	<div class="container">
-	<h2>Testimonials</h2>
-
-	<div id="carousel-testimonials" class="carousel slide" data-ride="carousel">
-
-	<div class="carousel-inner">	
-			<div class="item active animated bounceInRight">
-			<span class="animated slideInLeft"><img alt="portfolio" src="images/testimonials/1.jpg" width="100" class="img-circle"></span>
-			<p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
-			<span>Canada</span>
-			</div>
-			<div class="item  animated bounceInRight">
-			<span class="animated slideInLeft"><img alt="portfolio" src="images/testimonials/1.jpg" width="100" class="img-circle"></span>
-			<p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
-			<span>Canada</span>
-			</div>
-			<div class="item  animated bounceInRight">
-			<span class="animated slideInLeft"><img alt="portfolio" src="images/testimonials/1.jpg" width="100" class="img-circle"></span>
-			<p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
-			<span>Canada</span>
-			</div>
-	</div>
-
-	<!-- Controls -->
-  	<a class="left arrow" href="#carousel-testimonials" data-slide="prev"><i class="fa fa-angle-left"></i></a>
-  	<a class="right arrow" href="#carousel-testimonials" data-slide="next"><i class="fa fa-angle-right"></i></a>
-  	<!-- Controls -->
-	</div>
-
-	</div>	
-</div>
-</div>
-<!-- testimonials -->
-
-
-
-
-
-
-
-
-</div>
-
 
 <!-- contact -->
 <div id="contact" class="footer center spacer">
