--- a/index.html
+++ b/index.html
@@ -39,8 +39,9 @@
 				<div class="connect-icon">
 						<div class="prof-links clearfix animated bounceInUp">
 						<a href="#"><img alt="portfolio" src="images/linked.png" height="48"></a>
+						<a href="#"><img alt="portfolio" src="images/instagram.png"  height="48"></a>
 						<a href="#" class="behance"><img alt="portfolio" src="images/behance.png"></a>	
-						<a href="#"><img alt="portfolio" src="images/instagram.png"  width="32"></a>					
+										
 						</div>
 
 				</div>
