--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
 			<div class="col-sm-4 col-sm-offset-1">
 				<div class="connect-icon">
 						<div class="prof-links clearfix animated bounceInUp">
-						<a href="#"><img alt="portfolio" src="images/linked.png" height="48"></a>
-						<a href="#"><img alt="portfolio" src="images/instagram.png"  height="48"></a>
-						<a href="#" class="behance"><img alt="portfolio" src="images/behance.png"></a>	
+						<a href="https://www.linkedin.com/in/linaberzhaner/"><img alt="portfolio" src="images/linked.png" height="48"></a>
+						<a href="https://www.instagram.com/lina_berzhaner/"><img alt="portfolio" src="images/instagram.png"  height="48"></a>
+						<a href="https://www.behance.net/lina_berzhaner" class="behance"><img alt="portfolio" src="images/behance.png"></a>	
 										
 						</div>
 
