--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
 <!-- works -->
 <div id="works" class="portfolio spacer">
 <div class="container">
-<!--
-<h2 class="center">Works</h2>
+
+<!--<h2 class="center">Works</h2>
 
 	<ul class="grid effect-2" id="grid">
 		<li><img alt="portfolio" src="images/grid-image/1.jpg"><div class="overlay animated fadeIn"><span class="animated bounceIn"><a href="http://www.thebootstrapthemes.com" target="_blank"><i class="fa fa-link"></i> View Website</a></span></div></li>
@@ -86,10 +86,10 @@
 		<li><img alt="portfolio" src="images/grid-image/4.jpg"><div class="overlay animated fadeIn"><span class="animated bounceIn"><a href="http://www.thebootstrapthemes.com" target="_blank"><i class="fa fa-link"></i> View Website</a></span></div></li>
 		<li><img alt="portfolio" src="images/grid-image/5.jpg"><div class="overlay animated fadeIn"><span class="animated fadeInDown"><a href="http://www.thebootstrapthemes.com" target="_blank"><i class="fa fa-link"></i> View Website</a></span></div></li>
 	</ul>
-</div>
+</div>-->
 
 </div>
--->
+
 <!-- works -->
 
 <!-- contact -->
