--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     
 
 <!-- works -->
-<div id="works" class="portfolio spacer">
+<!--<div id="works" class="portfolio spacer">
 <div class="container">
 
 <h2 class="center">Works</h2>
@@ -82,7 +82,7 @@
 <!-- works -->
 
 <!-- contact -->
-<div id="contact" class="footer center spacer">
+<!--<div id="contact" class="footer center spacer">
 
 			
 
@@ -102,7 +102,7 @@
 
 		
 	</div>
-</div>
+</div>-->
 <!-- contact -->
 
 
