--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     
 
 <!-- works -->
-<!--<div id="works" class="portfolio spacer">
+<div id="works" class="portfolio spacer">
 <div class="container">
 
 <h2 class="center">Works</h2>
@@ -82,27 +82,27 @@
 <!-- works -->
 
 <!-- contact -->
-<!--<div id="contact" class="footer center spacer">
+<div id="contact" class="footer center spacer">
 
 			
 
 	<div class="container">
 		<div class="row">
 			<div class="col-sm-offset-3 col-sm-6 contact-form">		
-			<h3>Contact</h3>
+			<!--<h3>Contact</h3>
 			<p>I am available for Freelancing work and collaboration.</p>
 			<form  >
 			<input type="text" name="form_name" class="form-control" placeholder="Name" >
 			<input type="email"  name="form_email" class="form-control" placeholder="Email">
 			<textarea name="form_message" class="form-control" placeholder="Message" rows="5"></textarea>
 			<input type="submit"  name="Submit" class="btn btn-primary btn-lg" value="Submit">
-			</form>
+			</form>-->
 			</div>
 		</div>
 
 		
 	</div>
-</div>-->
+</div>
 <!-- contact -->
 
 
