--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 		<div class="row">
 			<div class="col-sm-7">
 				<h1 class="info animated fadeInDown"><a href="" class="logo">Hi<br>I am <u>I'm Berzhaner Lina UX UI Designer and Interactive Media Artist</u></a><br><b>I do UX Research <span>Design</span><br> <span></span><br></b></h1>
-				<!--<a href="#works" class="btn scroll animated bounceInUp">View My Works</a><a href="#contact" class="btn scroll animated bounceInDown">Contact</a>-->
+				<a href="#works" class="btn scroll animated bounceInUp">View My Works</a><a href="#contact" class="btn scroll animated bounceInDown">Contact</a>
 			</div>
 			<div class="col-sm-4 col-sm-offset-1">
 				<div class="connect-icon">
@@ -68,10 +68,6 @@
 		<li><img alt="portfolio" src="images/grid-image/2.jpg"><div class="overlay animated fadeIn"><span class="animated fadeInDown"><a href="http://www.thebootstrapthemes.com" target="_blank"><i class="fa fa-link"></i> View Website</a></span></div></li>
 		<li><img alt="portfolio" src="images/grid-image/3.jpg"><div class="overlay animated fadeIn"><span class="animated fadeInUp"><a href="http://www.thebootstrapthemes.com" target="_blank"><i class="fa fa-link"></i> View Website</a></span></div></li>
 		<li><img alt="portfolio" src="images/grid-image/4.jpg"><div class="overlay animated fadeIn"><span class="animated bounceIn"><a href="http://www.thebootstrapthemes.com" target="_blank"><i class="fa fa-link"></i> View Website</a></span></div></li>
-		<li><img alt="portfolio" src="images/grid-image/5.jpg"><div class="overlay animated fadeIn"><span class="animated fadeInDown"><a href="http://www.thebootstrapthemes.com" target="_blank"><i class="fa fa-link"></i> View Website</a></span></div></li>
-		<li><img alt="portfolio" src="images/grid-image/6.jpg"><div class="overlay animated fadeIn"><span class="animated bounceIn"><a href="http://www.thebootstrapthemes.com" target="_blank"><i class="fa fa-link"></i> View Website</a></span></div></li>
-		<li><img alt="portfolio" src="images/grid-image/7.jpg"><div class="overlay animated fadeIn"><span class="animated bounceIn"><a href="http://www.thebootstrapthemes.com" target="_blank"><i class="fa fa-link"></i> View Website</a></span></div></li>
-		<li><img alt="portfolio" src="images/grid-image/1.jpg"><div class="overlay animated fadeIn"><span class="animated bounceIn"><a href="http://www.thebootstrapthemes.com" target="_blank"><i class="fa fa-link"></i> View Website</a></span></div></li>
 		
 	</ul>
 	
@@ -84,19 +80,18 @@
 <!-- contact -->
 <div id="contact" class="footer center spacer">
 
-			
 
 	<div class="container">
 		<div class="row">
 			<div class="col-sm-offset-3 col-sm-6 contact-form">		
-			<!--<h3>Contact</h3>
+			<h3>Contact</h3>
 			<p>I am available for Freelancing work and collaboration.</p>
 			<form  >
 			<input type="text" name="form_name" class="form-control" placeholder="Name" >
 			<input type="email"  name="form_email" class="form-control" placeholder="Email">
 			<textarea name="form_message" class="form-control" placeholder="Message" rows="5"></textarea>
 			<input type="submit"  name="Submit" class="btn btn-primary btn-lg" value="Submit">
-			</form>-->
+			</form>
 			</div>
 		</div>
 
