--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
 		<div class="row">
 			<div class="col-sm-7">
 				<h1 class="info animated fadeInDown"><a href="" class="logo">Hi<br>I am <u>I'm Berzhaner Lina UX UI Designer and Interactive Media Artist</u></a><br><b>I do UX Research <span>Design</span><br> <span></span><br></b></h1>
-				<a href="#works" class="btn scroll animated bounceInUp">View My Works</a><a href="#contact" class="btn scroll animated bounceInDown">Contact</a>
+				<!--<a href="#works" class="btn scroll animated bounceInUp">View My Works</a>-->
+				<a href="#contact" class="btn scroll animated bounceInDown">Contact</a>
 			</div>
 			<div class="col-sm-4 col-sm-offset-1">
 				<div class="connect-icon">
@@ -59,7 +60,7 @@
     
 
 <!-- works -->
-<div id="works" class="portfolio spacer">
+<!--<div id="works" class="portfolio spacer">
 <div class="container">
 
 <h2 class="center">Works</h2>
@@ -71,7 +72,7 @@
 		
 	</ul>
 	
-</div>
+</div>-->
 
 </div>
 
