--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
     
 
 <!-- works -->
-<!--<div id="works" class="portfolio spacer">
-<div class="container">
+<div id="works" class="portfolio spacer">
+<!--<div class="container">
 
 <h2 class="center">Works</h2>
 	<ul class="grid effect-2" id="grid">
