--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 		<div class="row">
 			<div class="col-sm-7">
 				<h1 class="info animated fadeInDown"><a href="" class="logo">Hi<br>I am <u>I'm Berzhaner Lina UX UI Designer and Interactive Media Artist</u></a><br><b>I do UX Research <span>Design</span><br> <span></span><br></b></h1>
-				<!--<a href="#works" class="btn scroll animated bounceInUp">View My Works</a>-->
+				<a href="#works" class="btn scroll animated bounceInUp">View My Works</a>
 				<a href="#contact" class="btn scroll animated bounceInDown">Contact</a>
 			</div>
 			<div class="col-sm-4 col-sm-offset-1">
@@ -63,14 +63,12 @@
 <div id="works" class="portfolio spacer">
 <div class="container">
 
-<!-- <h2 class="center">Works</h2>
+<h2 class="center">Works</h2>
 	<ul class="grid effect-2" id="grid">
 		<li><img alt="portfolio" src="images/grid-image/1.jpg"><div class="overlay animated fadeIn"><span class="animated bounceIn"><a href="http://www.thebootstrapthemes.com" target="_blank"><i class="fa fa-link"></i> View Website</a></span></div></li>
-		<li><img alt="portfolio" src="images/grid-image/2.jpg"><div class="overlay animated fadeIn"><span class="animated fadeInDown"><a href="http://www.thebootstrapthemes.com" target="_blank"><i class="fa fa-link"></i> View Website</a></span></div></li>
-		<li><img alt="portfolio" src="images/grid-image/3.jpg"><div class="overlay animated fadeIn"><span class="animated fadeInUp"><a href="http://www.thebootstrapthemes.com" target="_blank"><i class="fa fa-link"></i> View Website</a></span></div></li>
-		<li><img alt="portfolio" src="images/grid-image/4.jpg"><div class="overlay animated fadeIn"><span class="animated bounceIn"><a href="http://www.thebootstrapthemes.com" target="_blank"><i class="fa fa-link"></i> View Website</a></span></div></li>
 		
-	</ul>-->
+		
+	</ul>
 	
 </div>
 
