--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
 <h2 class="center">Works</h2>
 	<ul class="grid effect-2" id="grid">
-		<li><img alt="portfolio" src="images/grid-image/1.jpg"><div class="overlay animated fadeIn"><span class="animated bounceIn"><a href="http://www.thebootstrapthemes.com" target="_blank"><i class="fa fa-link"></i> View Website</a></span></div></li>
+		<li><img alt="portfolio" src="images/grid-image/1.jpg"><div class="overlay animated fadeIn"><span class="animated bounceIn"><a href="#" target="_blank"><i class="fa fa-link"></i></a></span></div></li>
 		
 		
 	</ul>
