--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 		<div class="absolute-center">
 		<div class="row">
 			<div class="col-sm-7">
-				<h1 class="info animated fadeInDown"><a href="" class="logo">Hi<br>I am <u>I'm Berzhaner Lina UX UI Designer and Interactive Media Artist</u></a><br>based in Lausanne (Switzerland) with a background in art, design, and aviation. I believe that empathy is a keystone what makes a good story. Nothing excites me more than understanding someone’s story and having a chance to create the next part better <span>Design</span><br> <span></span><br></h1>
+				<h1 class="info animated fadeInDown"><a href="" class="logo">Hi<br>I am Lina Berzhaner UX UI Designer and Interactive Media Artist</a><br><span><h4 class="info animated fadeInDown"><a href="" class="logo"><br>based in Lausanne (Switzerland) with a background in art, design, and aviation. I believe that empathy is a keystone what makes a good story. Nothing excites me more than understanding someone’s story and having a chance to create the next part better</span><br></h4>
 				<a href="#works" class="btn scroll animated bounceInUp">View My Works</a>
 				<a href="#contact" class="btn scroll animated bounceInDown">Contact</a>
 			</div>
