--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" class="no-js">
-	<title>Portfolio website</title>
+	<title>Lina Berzhaner</title>
 	<meta name="author" content="Lina Berzhaner">
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -19,6 +19,7 @@
 	<link rel="stylesheet" href="assets/gridloading/css/component.css">
 	<link rel="stylesheet" href="assets/animate.css" >
 	<link rel="stylesheet" href="style.css">
+	<link href="https://fonts.googleapis.com/css?family=Merriweather+Sans" rel="stylesheet">
 
 
 	
@@ -32,7 +33,7 @@
 		<div class="absolute-center">
 		<div class="row">
 			<div class="col-sm-7">
-				<h1 class="info animated fadeInDown">Hi! I am Lina Berzhaner UX UI Designer and Interactive Media Artist<br><span><h3 class="info animated fadeInDown"><br>based in Lausanne (Switzerland) with a background in art, design, and aviation. I believe that empathy is a keystone what makes a good story. Nothing excites me more than understanding someone’s story and having a chance to create the next part better</span><br></h3>
+				<h1 class="info animated fadeInDown">Hi!<br>I am Lina Berzhaner UX UI Designer and Interactive Media Artist<br><span><h4 class="info animated fadeInDown"><br>based in Lausanne (Switzerland) with a background in art, design, and aviation. I believe that empathy is a keystone what makes a good story. Nothing excites me more than understanding someone’s story and having a chance to create the next part better</span><br></h4>
 				<a href="#works" class="btn scroll animated bounceInUp">View My Works</a>
 				<a href="#contact" class="btn scroll animated bounceInDown">Contact</a>
 			</div>
