--- a/index.html
+++ b/index.html
@@ -73,7 +73,10 @@
 
           <h1></h1>
           <h1 class="typewrite"><span>Portfolio</span></h1> <!--Change on script.js-->
-          <p>Please check my portfolio.</p>
+          <p>Hi!<br>I am Lina Berzhaner
+          UX UI Designer and
+          Interactive Media Artist<br>
+          based in Lausanne (Switzerland) with a background in art, design, and aviation. I believe that empathy is a keystone what makes a good story. Nothing excites me more than understanding someone’s story and having a chance to create the next part better</p>
 
         </div>
 
