--- a/index-2.html
+++ b/index-2.html
@@ -4,11 +4,8 @@
 <head>
 
   <meta charset="utf-8">
-  <title>Home v2 - THOMSOON - Portfolio with grid and modern simplicity style - buy now!</title>
-  <meta name="description" content="Thomsoon version 2 with classic menu navigation - Portfolio with grid HTML5 and CSS3 modern simplicity style template. Check my portfolio. Download free now with file Photoshop! ">
-  <meta name="keywords" content="amore, simplicity, theme, html5">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <meta name="author" content="thomsoon.com">
+  <title>Lina Berzhaner</title>
+  
   <link rel="icon" type="image/png" href="img/icon.png" />
 
 <!--Style-->
@@ -54,7 +51,7 @@
   <!--Header-->
   <header id="fullscreen">
     
-      <div class="logo" id="full" style="display:none;"><a class="ajax-link" href="index.html">THOMSOON</a></div>
+      <div class="logo" id="full" style="display:none;"><a class="ajax-link" href="index.html">LINA BERZHANER</a></div>
       
         <div class="menu-index" style="display:none;" id="button">
         <i class="fa fa-bars"></i>
@@ -68,7 +65,7 @@
 
   <div class="header-margin">
   
-    <div class="logo"><a class="ajax-link" href="index.html">THOMSOON</a></div>
+    <div class="logo"><a class="ajax-link" href="index.html">LINA BERZHANER</a></div>
     <ul class="header-nav">
       <li><a class="ajax-link" href="#">Projects</a>
         <ul>
@@ -104,9 +101,13 @@
 
       <div class="text-intro" id="site-type">
 
-        <h1>My creative and simplicity modern</h1>
+        <h1>UX UI Designer and Interactive Media Artist</h1>
         <h1 class="typewrite"><span>Portfolio</span></h1>
-        <p>Please check my portfolio. All project is clean and simplicity modern style. You can buy this template.</p>
+        <p>Hi!<br>
+I am Lina Berzhaner<br>
+UX UI Designer and
+Interactive Media Artist<br>
+based in Lausanne (Switzerland) with a background in art, design, and aviation. I believe that empathy is a keystone what makes a good story. Nothing excites me more than understanding someone’s story and having a chance to create the next part better</p>
 
       </div>
 
